{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 195,
  "lineage": "3ef1c772-129f-1554-9423-963b40a2c923",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:129999085861:instance/i-08f8b7fa6e25ce7d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f8b7fa6e25ce7d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0257afd18252981f4",
            "private_dns": "ip-10-0-1-203.ec2.internal",
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-44-204-249-108.compute-1.amazonaws.com",
            "public_ip": "44.204.249.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7f00ad93ce87879",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dad420efc805d167",
            "tags": {
              "Name": "EC2-0-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "EC2-0-basic_network_infraestructure"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027ec94990d0d3dc8"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group_http",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:internet-gateway/igw-05f982e9bc8a8d4d2",
            "id": "igw-05f982e9bc8a8d4d2",
            "owner_id": "129999085861",
            "tags": {
              "Name": "igw-VPC-1-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "igw-VPC-1-basic_network_infraestructure"
            },
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:route-table/rtb-07cbae64dc2229be6",
            "id": "rtb-07cbae64dc2229be6",
            "owner_id": "129999085861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f982e9bc8a8d4d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a5edf8dfc92ddf3",
            "route_table_id": "rtb-07cbae64dc2229be6",
            "subnet_id": "subnet-0dad420efc805d167"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_1",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dce43abf0a371736",
            "route_table_id": "rtb-07cbae64dc2229be6",
            "subnet_id": "subnet-05eb11bd7bbe7b420"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_1",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be43087b2ccf2828",
            "route_table_id": "rtb-07cbae64dc2229be6",
            "subnet_id": "subnet-08754373608590d15"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_1",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:security-group/sg-027ec94990d0d3dc8",
            "description": "Security group for HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027ec94990d0d3dc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_security_group",
            "name_prefix": "",
            "owner_id": "129999085861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP-Security_group"
            },
            "tags_all": {
              "Name": "HTTP-Security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:subnet/subnet-055c694417f00e924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055c694417f00e924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129999085861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet-0-VPC-1-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "Private_subnet-0-VPC-1-basic_network_infraestructure"
            },
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:subnet/subnet-0c543a2b845c803fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c543a2b845c803fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129999085861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet-1-VPC-1-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "Private_subnet-1-VPC-1-basic_network_infraestructure"
            },
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:subnet/subnet-0a36cb5df565185ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a36cb5df565185ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129999085861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet-2-VPC-1-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "Private_subnet-2-VPC-1-basic_network_infraestructure"
            },
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:subnet/subnet-0dad420efc805d167",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dad420efc805d167",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129999085861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet-0-VPC-1-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "Public_subnet-0-VPC-1-basic_network_infraestructure"
            },
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:subnet/subnet-05eb11bd7bbe7b420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eb11bd7bbe7b420",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129999085861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet-1-VPC-1-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "Public_subnet-1-VPC-1-basic_network_infraestructure"
            },
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:subnet/subnet-08754373608590d15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08754373608590d15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129999085861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet-2-VPC-1-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "Public_subnet-2-VPC-1-basic_network_infraestructure"
            },
            "vpc_id": "vpc-0d6964fa351b1202d"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129999085861:vpc/vpc-0d6964fa351b1202d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03203e1693bb847ff",
            "default_route_table_id": "rtb-0c8474a92df2981de",
            "default_security_group_id": "sg-07a6fba334b304712",
            "dhcp_options_id": "dopt-0e254cfa9cd220dd8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d6964fa351b1202d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8474a92df2981de",
            "owner_id": "129999085861",
            "tags": {
              "Name": "VPC-1-basic_network_infraestructure"
            },
            "tags_all": {
              "Name": "VPC-1-basic_network_infraestructure"
            }
          }
        }
      ]
    }
  ]
}